# sheppy

./: .gitignore  404.html  README.md  Taskfile.yml  docker-compose.test.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build-docs.yml  publish.yml  test.yml  test_dependency_versions.yml
about/: index.html
about/license/: index.html
about/roadmap/: index.html
assets/javascripts/: bundle.f55a23d4.min.js
changelog/: index.html
docs/: CNAME  api-reference.md  changelog.md  getting-started.md  index.md
docs/about/: index.md  license.md  roadmap.md
docs/examples/: index.md
docs/getting-started/: cron.md  error-handling.md  index.md  quickstart.md  task-scheduling.md  testing.md  validation-with-pydantic.md
docs/reference/: cli.md  queue.md  task-config.md  task-cron.md  task-spec.md  task.md  testqueue.md  worker.md
examples/: dlq_example.py  example_dependency.py  example_timeout.py  index.html  pydantic_example.py  quickstart.py  rate_limits.py  simple.py  simple_scheduled.py  simple_with_fastapi.py  testqueue_example.py  tldr.py
examples/fastapi-integration/: example_apirouter.py
examples/quick-start/: docker-compose.yml  main.py  pyproject.toml  run_worker.py  tasks.py
examples/testing/: test_assert_helper_functions.py  test_failure.py  test_retry_logic.py
examples/workflows/: fan_in_fan_out.py  simple.py
getting-started/: index.html
search/: search_index.json
tests/: conftest.py  dependencies.py  test_contract.py  test_memory_backend.py  test_testqueue.py  utils.py
(+119 files in other folders)
