[project]
name = "sheppy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Martin", email = "15851033+malvex@users.noreply.github.com" }
]

dependencies = [
    "anyio>=3.0.1",
    "pydantic>=2.1.1",
    "redis>=6.0.0",
    "typer>=0.16.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sheppy"]

[tool.hatch.build.targets.sdist]
only-include = ["src/sheppy"]

[project.scripts]
sheppy = "sheppy.cli.cli:app"

[tool.mypy]
strict = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-rXs --strict-config --strict-markers"
xfail_strict = true
